you can add locations from the web interface

--- a/static/partial/employees.html
+++ b/static/partial/employees.html
@@ -6,7 +6,7 @@
 	</li>
 </ul>
 <section ng-hide="showNewEmployee">
-    <button ng-click="showAddEmployee()">Add new employee</button>
+    <button ng-click="showNewEmployee=true">Add new employee</button>
 </section>
 
 <section ng-show="showNewEmployee">
