create initial transaction for employee, show on page

--- a/static/partial/board.html
+++ b/static/partial/board.html
@@ -7,7 +7,7 @@
 	</tr></thead>
 	<tr ng-repeat="employee in employees">
 		<td>{{employee.Name}}</td>
-		<td><button class="btn btn-default" ng-click="newTransaction()">Change</button
+        <td>{{employee.Location}}<button class="btn btn-default" ng-click="newTransaction()">Change</button
 		<td></td>
 	</tr>
 </ul>
